fix chapter opener getting cut off #2076

--- a/css/ccap-astronomy.css
+++ b/css/ccap-astronomy.css
@@ -2824,7 +2824,7 @@ div.book div.chapter > div.titlepage > div > div h1.title {
   left: 0;
   right: 0;
   width: 8.5in;
-  height: 3.45in;
+  height: 3.5in;
   color: #3C2747;
   font-size: 18px;
 }
@@ -2832,14 +2832,20 @@ div.book div.chapter > div.titlepage > div > div h1.title span.cnx-gentext-n {
   font-weight: bold;
   padding-right: 0em;
   color: #1E7E91;
+  font-family: 'Noto Sans', sans-serif, STIXGeneral, STIXSizeOneSym, STIXSize1;
   top: auto;
   left: 0;
   bottom: 52px;
   background-color: white;
   border-radius: 50%;
-  padding: 8px 15px;
   min-width: 0;
   min-height: 0;
+  width: 45px;
+  height: 45px;
+  padding-top: 0;
+  border: none;
+  display: block;
+  line-height: 45px;
   color: #77294A;
 }
 div.book div.chapter > div.titlepage > div > div h1.title span.cnx-gentext-t {
@@ -4880,7 +4886,7 @@ div.book div.preface > p + .section {
   margin-top: 18px;
 }
 .chapter > .introduction {
-  margin-top: -0.85in;
+  margin-top: -0.8in;
 }
 div.book > div.chapter > div.titlepage {
   height: 100%;
@@ -4901,7 +4907,7 @@ div.book > div.chapter > div.titlepage div div > h1.title {
   left: 0;
   right: 0;
   width: 8.5in;
-  height: 3.45in;
+  height: 3.5in;
   color: #3C2747;
   font-size: 18px;
 }
@@ -4909,14 +4915,20 @@ div.book > div.chapter > div.titlepage div div > h1.title::before {
   font-weight: bold;
   padding-right: 0em;
   color: #1E7E91;
+  font-family: 'Noto Sans', sans-serif, STIXGeneral, STIXSizeOneSym, STIXSize1;
   top: auto;
   left: 0;
   bottom: 52px;
   background-color: white;
   border-radius: 50%;
-  padding: 8px 15px;
   min-width: 0;
   min-height: 0;
+  width: 45px;
+  height: 45px;
+  padding-top: 0;
+  border: none;
+  display: block;
+  line-height: 45px;
   color: #77294A;
 }
 div.book > div.chapter > div.titlepage div div > h1.title::after {
