--- a/css/refactor/astronomy-slots.less
+++ b/css/refactor/astronomy-slots.less
@@ -154,19 +154,25 @@
         left: 0;
         right: 0;
         width: 8.5in;
-        height: 3.45in;
+        height: 3.5in;
         color: @tertiary-color;
         .font-scale(2);
       }
       .number() {
+        font-family: @font-family;
         top: auto;
         left: 0;
         bottom: 52px;
         background-color: white;
         border-radius: 50%;
-        padding: 8px 15px;
         min-width: 0;
         min-height: 0;
+        width: 45px;
+        height: 45px;
+        padding-top: 0;
+        border: none;
+        display: block;
+        line-height: 45px;
         color: @secondary-color;
       }
       .text() {
@@ -192,7 +198,7 @@
   }
   #introduction {
     .style() {
-      margin-top: -0.85in;
+      margin-top: -0.80in;
     }
     #title {
       .style() {
